--- a/src/app/modules/pms/pages/property/property.component.html
+++ b/src/app/modules/pms/pages/property/property.component.html
@@ -197,7 +197,7 @@
         </div>
     </nz-tab>
 </nz-tabset>
-<nz-modal [(nzVisible)]="isModalVisible" [nzWidth]="1000" nzTitle="More details on residence" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
+<nz-modal [(nzVisible)]="isModalVisible" [nzWidth]="1000" nzTitle="More details on Property" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
     <ng-container *nzModalContent>
         <div>
           <nz-divider style="font-size: x-large" nzText="Image Uploader"></nz-divider>
